# silero-fastapi

./: .gitignore  LICENSE  MODEL_LICENSES.md  README.md  SECURITY.md  pyproject.toml  run.bat  run.py  run.sh
.github/workflows/: ci.yml
src/silero_fastapi/: __init__.py  app.py  audio.py  catalog.py  cli.py  runtime.py  schemas.py  service.py  settings.py  store.py  stress.py
tests/: test_api.py  test_audio.py  test_catalog.py  test_cli.py  test_real_model_smoke.py  test_runtime.py  test_store.py  test_stress.py
